# modus

./: .env.template  .gitignore  Cargo.toml  Dockerfile  Dockerfile.geni  Makefile  README.md
.github/: build.yml
migrations/: 1734457512_init.down.sql  1734457512_init.up.sql  schema.sql
src/lib/: config.rs  domain.rs
src/lib/domain/readiness/: ports.rs  service.rs
src/lib/domain/readiness/models/: ready.rs
src/lib/domain/reminders/: ports.rs  service.rs
src/lib/domain/reminders/models/: task.rs
src/lib/inbound/: http.rs
src/lib/inbound/http/: handlers.rs  responses.rs
src/lib/inbound/http/handlers/: create_task.rs  liveness.rs  readiness.rs  shared.rs
src/lib/outbound/: sql.rs
